tests/baselines/reference/mappedTypeIndexedAccess.errors.txt
mappedTypeIndexedAccess.ts(20,5): error TS2322: Type 'number' is not assignable to type 'string'.
mappedTypeIndexedAccess.ts(26,5): error TS2322: Type 'number' is not assignable to type 'string'.


==== mappedTypeIndexedAccess.ts (2 errors) ====
    // Repro from #15756
    
    type Pairs<T> = {
        [TKey in keyof T]: {
            key: TKey;
            value: T[TKey];
        };
    };
    
    type Pair<T> = Pairs<T>[keyof T];
    
    type FooBar = {
        foo: string;
        bar: number;
    };
    
    // Error expected here
    let pair1: Pair<FooBar> = {
        key: "foo",
        value: 3
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 mappedTypeIndexedAccess.ts:6:9: The expected type comes from property 'value' which is declared here on type 'Pair<FooBar>'
    };
    
    // Error expected here
    let pair2: Pairs<FooBar>[keyof FooBar] = {
        key: "foo",
        value: 3
        ~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6500 mappedTypeIndexedAccess.ts:6:9: The expected type comes from property 'value' which is declared here on type '{ key: "foo"; value: string; } | { key: "bar"; value: number; }'
    };
    